--- a/html5up-strongly-typed/assets/css/main.css
+++ b/html5up-strongly-typed/assets/css/main.css
@@ -2105,20 +2105,20 @@ input, select, textarea {
 		position: relative;
 		overflow: hidden;
 		background: #fff;
-		color: #000;
+		color: #fff;
 		text-align: center;
 		border-top: solid 2px #e5e5e5;
 		border-bottom: solid 2px #e5e5e5;
 		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px 8px 0px 0px #fff;
 		position: relative;
 		text-transform: uppercase;
-		background: url("../../images/wildtextures-creased-decorative-paper-texture copy.jpg");
+		background: url("../../images/Blue.Purple.Focal.Polygon copy.png");
 		background-size: cover;
 		padding: 10em 0;
 	}
 
 		#banner p {
-			font-weight: 400;
+			font-weight: 700;
 			font-size: 2em;
 			line-height: 1.5em;
 			letter-spacing: 4px;
