added height and hid overflow on recents section. Pictures fixed.

--- a/html5up-strongly-typed/assets/css/main.css
+++ b/html5up-strongly-typed/assets/css/main.css
@@ -1509,6 +1509,11 @@ input, select, textarea {
 			margin: 0 0 3.5em 0;
 		}
 
+		.image.recent {
+			height: 13.5em;
+			overflow: hidden;
+		}
+
 		.image.left {
 			float: left;
 			margin: 0 1.5em 1.5em 0;
