changed font on banner quote

--- a/html5up-strongly-typed/assets/css/main.css
+++ b/html5up-strongly-typed/assets/css/main.css
@@ -2123,13 +2123,18 @@ input, select, textarea {
 	}
 
 		#banner p {
-			font-family: 'Rock Salt', cursive;
 			font-weight: 700;
-			font-size: 1.5em;
-			line-height: 2em;
+			font-size: 1.2em;
+			line-height: 1.5em;
 			letter-spacing: 4px;
 			text-align: center;
 			margin: 0;
+		}
+
+		#banner #name {
+			font-family: 'Rock Salt', cursive;
+			font-size: 1.2em;
+			line-height: 2em;
 		}
 
 		#banner strong {
